gui changes for h2t

--- a/BlueMS/src/main/assets/about.html
+++ b/BlueMS/src/main/assets/about.html
@@ -51,11 +51,10 @@
         </style>
     </head>
     <body>
-        <p>ST BLE Sensor demo application to be used with STMicroelectronics<br/>
+        <p>WalkWell Heel-2-Toe Android application with <br/>
         <a href="http://www.st.com/content/st_com/en/products/embedded-software/wireless-connectivity-software/bluest-sdk.html">
-            <i style="color:#0000ff">BlueST SDK</i></a> compatible firmware.</p>
-        <p>For further information visit this <a href="http://www.st.com/stblesensor">page</a>.</p>
-
+            <i style="color:#0000ff">BlueST SDK</i></a> firmware.</p>
+        <p>&copy; 2019 Physio Biometrics Inc.</p>
     </body>
 </html>
 
