--- a/BlueMS/src/main/assets/about.html
+++ b/BlueMS/src/main/assets/about.html
@@ -51,10 +51,11 @@
         </style>
     </head>
     <body>
-        <p>WalkWell Heel-2-Toe Android application with <br/>
-        <a href="http://www.st.com/content/st_com/en/products/embedded-software/wireless-connectivity-software/bluest-sdk.html">
-            <i style="color:#0000ff">BlueST SDK</i></a> firmware.</p>
-        <p>&copy; 2019 Physio Biometrics Inc.</p>
+    <p><a href="https://physiobiometrics.com/">PhysioBiometrics Inc.</a></p>
+    <p>&copy; 2020 Physio Biometrics Inc.</p>
+    <p><a href="http://www.st.com/content/st_com/en/products/embedded-software/wireless-connectivity-software/bluest-sdk.html"><i style="color:#0000ff">BlueST-SDK</i></a> firmware.</p>
+    <p>&copy; 2019 STMicroelectronics Inc.</p>
+
     </body>
 </html>
 
